feat: 附近产品列表

--- a/pages/tab-bar-pages/home/index.wxml
+++ b/pages/tab-bar-pages/home/index.wxml
@@ -33,7 +33,9 @@
     <view 
       class="sub-menu-tab {{curSubMenuIndex === index ? 'active' : ''}} row center" 
       wx:for="{{['综合', '景点', '酒店', '美食']}}"
+      wx:key="index"
       bindtap="switchSubMenu"
+      data-index="{{index}}"
     >
       {{item}}
     </view>
