--- a/pages/subpages/common/promoter/index.wxml
+++ b/pages/subpages/common/promoter/index.wxml
@@ -8,7 +8,7 @@
 <view class="container">
   <view class="promoter-info-wrap" wx:if="{{superiorInfo}}" style="margin-top: {{statusBarHeight + 128}}px;">
     <view class="promoter-avatar-wrap">
-      <image class="promoter-avatar" src="{{superiorInfo.avatar}}" />
+      <image class="promoter-avatar" src="{{superiorInfo.avatar}}?x-oss-process=image/format,webp" />
       <image 
         class="promoter-medal" 
         src="https://static.tiddler.cn/mp/promoter/level_{{superiorInfo.promoterInfo.level}}/medal.gif" 
