--- a/pages/subpages/mall/hotel/subpages/hotel-detail/index.wxml
+++ b/pages/subpages/mall/hotel/subpages/hotel-detail/index.wxml
@@ -223,7 +223,7 @@
           <view class="qa-question">{{ item.content }}</view>
           <view class="first-answer" wx:if="{{index === 0 && item.firstAnswer}}">
             <view class="answer-user row">
-              <image class="answer-user-avatar" src="{{item.firstAnswer.userInfo.avatar}}" />
+              <image class="answer-user-avatar" src="{{item.firstAnswer.userInfo.avatar}}?x-oss-process=image/format,webp" />
               <view class="answer-user-name">{{item.firstAnswer.userInfo.nickname}}</view>
             </view>
             <view class="qa-answer omit single">{{item.firstAnswer.content}}</view>
@@ -231,7 +231,7 @@
           <view class="qa-no-answer" wx:if="{{index === 0 && !item.firstAnswer}}">暂无回答</view>
           <view class="qa-answers row" wx:if="{{index !== 0}}">
             <view class="qa-answers-avatars row" wx:if="{{item.answerNum}}">
-              <image class="answer-user-avatar" wx:for="{{item.userList}}" wx:key="userIdx" wx:for-index="userIdx" wx:for-item="user" src="{{user.avatar}}" />
+              <image class="answer-user-avatar" wx:for="{{item.userList}}" wx:key="userIdx" wx:for-index="userIdx" wx:for-item="user" src="{{user.avatar}}?x-oss-process=image/format,webp" />
             </view>
             <view class="qa-answers-number">{{item.answerNum ? item.answerNum + '人回答' : '暂无回答'}}</view>
           </view>
