--- a/pages/subpages/mall/goods/subpages/goods-detail/index.wxml
+++ b/pages/subpages/mall/goods/subpages/goods-detail/index.wxml
@@ -52,7 +52,7 @@
   <swiper class="customer-banner" vertical autoplay circular>
     <swiper-item class="customer-info-wrap" wx:for="{{goodsInfo.customerList}}" wx:key="index">
       <view class="customer-info">
-        <image class="customer-avatar" src="{{item.avatar}}" />
+        <image class="customer-avatar" src="{{item.avatar}}?x-oss-process=image/format,webp" />
         <view class="customer-name">{{STRING.nicknameFilter(item.nickname || '')}}</view>
         <view class="customer-content">{{TIME.timeDiff(item.createdAt)}}购买了该商品</view>
       </view>
@@ -165,7 +165,7 @@
     <view class="evaluation-list">
       <view class="evaluation-item" wx:for="{{evaluationSummary.list}}" wx:key="index">
         <view class="evaluation-user-info row">
-          <image class="evaluation-user-avatar" src="{{item.userInfo.avatar}}" />
+          <image class="evaluation-user-avatar" src="{{item.userInfo.avatar}}?x-oss-process=image/format,webp" />
           <view class="evaluation-user-name">{{item.userInfo.nickname}}</view>
           <van-rate style="margin-bottom: 6rpx" value="{{item.score || 0}}" size="12" gutter="0" color="#fa2458" void-icon="star" void-color="#fedbe4" allow-half readonly />
         </view>
