--- a/pages/subpages/mine/promoter/subpages/customer/components/customer-item/index.wxml
+++ b/pages/subpages/mine/promoter/subpages/customer/components/customer-item/index.wxml
@@ -2,7 +2,7 @@
 
 <view class="customer-item">
   <view class="info-wrap">
-    <image class="avatar" src="{{item.avatar}}" lazy-load />
+    <image class="avatar" src="{{item.avatar}}?x-oss-process=image/format,webp" lazy-load />
     <view class="info">
       <view class="name">{{ item.nickname }}</view>
       <view class="mobile">{{ mobile }}</view>
