--- a/pages/subpages/common/promoter/index.wxml
+++ b/pages/subpages/common/promoter/index.wxml
@@ -1,3 +1,5 @@
+<wxs module="TIME" src="/utils/filters/time.wxs" />
+
 <view class="header {{headerVisible ? 'show' : ''}}" style="padding-top: {{statusBarHeight}}px">
   <view class="nav-bar row">
     <back-icon />
@@ -41,7 +43,7 @@
       <view class="data">{{answerCount || '--'}}</view>
       <view class="split-line">/</view>
       <view>平均响应</view>
-      <view class="data">{{averageDuration || '--'}}</view>
+      <view class="data">{{averageDuration ? TIME.formatReplyTime(averageDuration) : '--'}}</view>
     </view>
   </view>
 
