--- a/utils/filters/time.wxs
+++ b/utils/filters/time.wxs
@@ -76,48 +76,6 @@ function countdown(timeStamp, statement) {
   }
 }
 
-// function timeDiff(timeStamp) {
-//   var minute = 1000 * 60;
-//   var hour = minute * 60;
-//   var day = hour * 24;
-//   var month = day * 30;
-
-//   var now = getDate().getTime();
-//   var diffValue = now - getDate(timeStamp).getTime();
-//   if (diffValue < 0) {
-//     return;
-//   }
-//   var monthC = diffValue / month;
-//   var weekC = diffValue / (7 * day);
-//   var dayC = diffValue / day;
-//   var hourC = diffValue / hour;
-//   var minC = diffValue / minute;
-
-//   var result;
-//   if (monthC >= 1) {
-//     if (monthC <= 12) {
-//       result = parseInt(monthC) + "个月前";
-//     } else {
-//       result = parseInt(monthC / 12) + "年前";
-//     }
-//   } else if (weekC >= 1) {
-//     result = parseInt(weekC) + "周前";
-//   } else if (dayC >= 1) {
-//     if (dayC < 2) {
-//       result = "昨天";
-//     } else {
-//       result = parseInt(dayC) + "天前";
-//     }
-//   } else if (hourC >= 1) {
-//     result = parseInt(hourC) + "小时前";
-//   } else if (minC >= 1) {
-//     result = parseInt(minC) + "分钟前";
-//   } else {
-//     result = "刚刚";
-//   }
-//   return result;
-// }
-
 function timeDiff(timeStamp) {
     var date = getDate(timeStamp);
     var now = getDate();
@@ -185,6 +143,38 @@ function calculateDuration(startTimeStamp, statement, endTimeStamp = 0) {
   }
 }
 
+function formatReplyTime(minutes) {
+  if (minutes <= 1) {
+    return "1分钟";
+  }
+
+  if (minutes < 60) {
+    var rounded = Math.round(minutes);
+    return rounded + "分钟";
+  }
+
+  var hours = Math.floor(minutes / 60);
+  var remainMins = Math.round(minutes % 60);
+
+  if (hours < 24) {
+    if (remainMins > 0) {
+      return hours + "小时" + remainMins + "分钟";
+    } else {
+      return hours + "小时";
+    }
+  }
+
+  var days = Math.floor(hours / 24);
+  var remainHours = hours % 24;
+
+  if (remainHours > 0) {
+    return days + "天" + remainHours + "小时";
+  } else {
+    return days + "天";
+  }
+}
+
+
 module.exports = {
   format: format,
   transform: transform,
@@ -192,4 +182,5 @@ module.exports = {
   countdown: countdown,
   timeDiff: timeDiff,
   calculateDuration: calculateDuration,
+  formatReplyTime: formatReplyTime
 };
