feat: 家乡代言人评价

--- a/pages/subpages/common/promoter/subpages/evaluation/index.wxml
+++ b/pages/subpages/common/promoter/subpages/evaluation/index.wxml
@@ -14,7 +14,7 @@
         bindtap="selectTag"
         data-index="{{index}}"
       >
-        {{item.text}}
+        {{item.content}}
       </view>
     </view>
 
