--- a/pages/subpages/mine/setting/subpages/password-setting/index.wxml
+++ b/pages/subpages/mine/setting/subpages/password-setting/index.wxml
@@ -1,30 +1,32 @@
-<view class="card">
-  <view class="form" wx:if="{{userInfo.password}}">
-    <view class="title">原始密码</view>
-    <input 
-      class="password-input" 
-      bindinput="setPassword" 
-      placeholder="请输入原始密码" 
-    />
+<view class="container">
+  <view class="card">
+    <view class="form" wx:if="{{userInfo.password}}">
+      <view class="title">原始密码</view>
+      <input 
+        class="password-input" 
+        bindinput="setPassword" 
+        placeholder="请输入原始密码" 
+      />
+    </view>
+    
+    <view class="form">
+      <view class="title">新密码</view>
+      <input 
+        class="password-input" 
+        bindinput="setNewPassword" 
+        placeholder="请输入新密码" 
+      />
+    </view>
+  
+    <view class="form">
+      <view class="title">确认密码</view>
+      <input 
+        class="password-input" 
+        bindinput="setPasswordConfirm" 
+        placeholder="请再次输入新密码" 
+      />
+    </view>
   </view>
   
-  <view class="form">
-    <view class="title">新密码</view>
-    <input 
-      class="password-input" 
-      bindinput="setNewPassword" 
-      placeholder="请输入新密码" 
-    />
-  </view>
-
-  <view class="form">
-    <view class="title">确认密码</view>
-    <input 
-      class="password-input" 
-      bindinput="setPasswordConfirm" 
-      placeholder="请再次输入新密码" 
-    />
-  </view>
+  <view class="submit-btn" bindtap="submit">提交</view>
 </view>
-
-<view class="submit-btn" bindtap="submit">提交</view>
